# mc-server

./: .gitignore  Cargo.toml  build.rs
assets/: sounds.json
server/: Cargo.toml
server/src/: lib.rs  logger.rs
server/src/auth/: profile.rs
server/src/chat/: click_event.rs  hover_event.rs  mod.rs  style.rs
server/src/chat/component/: mod.rs  (+2 more)
server/src/core/: mod.rs  registries.rs  resource_location.rs
server/src/network/: connection.rs  listener.rs  mod.rs  worker.rs
server/src/server/: mod.rs  settings.rs  status.rs
server/src/util/: json_value.rs  properties.rs  time.rs  traitable.rs
server/src/world/: difficulty.rs  game_mode.rs  mod.rs
src/: context.rs  events.rs  macros.rs  main.rs  settings.rs
src/auth/: profile.rs
src/chat/: click_event.rs  color.rs  hover_event.rs  mod.rs  style.rs
src/chat/component/: base.rs  mod.rs  text.rs
src/chat/component_bak/: mod.rs  text.rs
src/core/: events.rs  mod.rs  registries.rs  registry.rs  resource_location.rs  sound.rs
src/minecraft/: blocks.rs  mod.rs  sounds.rs
src/minecraft/protocol/: handshake.rs  login.rs  mod.rs  status.rs
src/network/: connection.rs  listener.rs  mod.rs  worker.rs
src/network/protocol/: data.rs  handler.rs  io.rs  mod.rs
src/server/: executor.rs  mod.rs  server.rs  server_status.rs  settings.rs  status.rs  ticker.rs  watcher.rs
src/server/network/: listener.rs  mod.rs
src/util/: json_value.rs  mod.rs  properties.rs  time.rs  traitable.rs
src/world/: difficulty.rs  game_mode.rs  mod.rs
src/world/level/: dimension.rs  kind.rs  level.rs  level_type.rs  mod.rs
(+24 files in other folders)
