[package]
name = "mc-server"
version = "0.1.0"
authors = ["Jaden Buchan <me@jaden.bio>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
java-props = "0.1.2"
futures = "0.3.4"
lazy_static = "1.4.0"
regex = "1.3.6"
chrono = "0.4.11"
log4rs = { version = "0.11.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }