[package]
name = "mc-server"
version = "0.1.0"
authors = ["Jaden Buchan <me@jaden.bio>"]
edition = "2018"

[dependencies]
log = "0.4.8"
java-props = "0.1.2"
futures = { version = "0.3.4", features = ["thread-pool"] }
lazy_static = "1.4.0"
regex = "1.3.6"
chrono = "0.4.11"
log4rs = { version = "0.11.0", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }
uuid = "0.8.1"
serde = "1.0.106"
serde_json = "1.0.50"
mopa = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version =  "0.3", features = ["codec"] }
tokio-io-timeout = "0.4"
event-bus = "0.1"
colored = "1.9"
bytes = "0.5"
thiserror = "1.0"
flume = "0.7"
anyhow = "1.0"
async-trait = "0.1"
ctrlc = "3.1"
java-rand = "0.2"
rand = "0.7"

[build-dependencies]
serde_json = "1.0.50"